<resources>
    <string name="app_name">DarkHeresy Character Companion</string>

    <!--  WORLD  -->
    <string name="feral_world">Mundo salvaje</string>
    <string name="forge_world">Mundo forja</string>
    <string name="highborn">Noble cuna</string>
    <string name="hive_world">Mundo Colmena</string>


    <!--    CHARACTERISTICS -->
    <string name="weapon_skill">Habilidad de armas (HA)</string>
    <string name="ballistic_skill">Habilidad de proyectiles (HP)</string>
    <string name="strength">Fuerza (F)</string>
    <string name="toughness">Resistencia (R)</string>
    <string name="agility">Agilidad (AG)</string>
    <string name="intelligence">Inteligencia (INT)</string>
    <string name="perception">Percepción (PER)</string>
    <string name="willpower">Voluntad (V)</string>
    <string name="fellowship">Empatía (EM)</string>
    <string name="influence">Influencia (IFL)</string>

    <!--    HOMEWORLD BONUSES -->
    <string name="the_old_ways_title">Las viejas costumbres</string>
    <string name="the_old_ways_summary">En manos del personaje, cualquier arma de baja tecnología pierde la propiedad Primitiva (si la tiene) y gana la propiedad Probada</string>
    <string name="omnissiahs_chosen_title">Elegido del Omnissiah</string>
    <string name="omnissiahs_chosen_summary">El personaje comienza con el talento Arma tecnológica o Toque mecánico</string>
    <string name="breeding_counts_title">El linaje importa</string>
    <string name="breeding_counts_summary">Cada vez que el personaje deba reducir su Influencia, la disminuye en 1 menos (hasta una reducción mínima de 1)</string>
    <string name="teeming_masses_title">Incontables masas en montañas de metal</string>
    <string name="teeming_masses_summary">El personaje ignora las multitudes con respecto al movimiento, tratándolas como terreno abierto. En espacios cerrados, obtiene un +20 a las tiradas de Navegación (Superficie).</string>
    <string name="faith_in_the_creed_title">Fe en el Credo</string>
    <string name="faith_in_the_creed_summary">Siempre que el personaje gasta un punto de Destino, tira 1d10. Con un resultado de 1, no se reduce el total de puntos de Destino del personaje.</string>
    <string name="child_of_the_dark_title">Hijo de la oscuridad</string>
    <string name="child_of_the_dark_summary">El personaje obtiene el talento Imperturbable y gana un +30 a las tiradas de movimiento en un entorno de gravedad cero.</string>

    <!--     BACKGROUNDS -->
    <string name="adeptus_administratum">Adeptus Administratum</string>
    <string name="adeptus_arbites">Adeptus Arbites</string>
    <string name="adeptus_mechanicus">Adeptus Mechanicus</string>
    <string name="imperial_guard">Guardia Imperial</string>
    <string name="adeptus_astra_telephatica">Adeptus Astra Telepathica</string>
    <string name="outcast">Proscrito</string>
    <string name="adeptus_ministorum">Adeptus Ministorum</string>
    <string name="shrine_world">Mundo Altar</string>
    <string name="voidborn">Nacido en el Vacío</string>

    <!--  New character menu  -->
    <string name="title_new_character">Nuevo personaje</string>
    <string name="homeworld">Origen</string>
    <string name="background">Transfondo</string>
    <string name="role">Rol</string>
    <string name="px">Experiencia</string>


    <string name="characteristic_modifiers">Modificadores</string>
    <string name="fate_threshold">Umbral de destino</string>
    <string name="homeworld_bonus">Bonificaciones</string>
    <string name="aptitude">Aptitud</string>
    <string name="wounds">Heridas</string>
    <string name="recomended_backgrounds">Trasfondos recomendados</string>
    <string name="fate_threshold_values">%1$d (Bendición del Emperador %2$d+)</string>
    <string name="homeworld_bonus_values">%1$s: %2$s</string>
    <string name="wounds_values">%1$d+%2$dd%3$d</string>
    <string name="feral_world_description">Son mundos que, por algún motivo, los colonos han degenerado social y tecnológicamente a un estado preindustrial. Esto es bastante amplio, y puede abarcar desde nativos involucionados que se encuentren en la Edad de Piedra, a habitantes que conozcan la pólvora negra y las máquinas de vapor. Una variante de los Mundos Ferales son los llamados Mundos Feudales, en los que sus habitantes conocen las armas primitivas de filo, el arco y la flecha, y poco más. La mayoría de los moradores de esos mundos viven en chozas de madera y sus gobernantes en castillos de piedra.</string>
    <string name="characteristics">Características</string>
    <string name="restant_char_points">Gastados %1$d de %2$d puntos.</string>

    <!--  TALENTS  -->
    <string name="strong_minded">Imperturbable</string>
    <string name="technical_knock">Toque mecánico</string>
    <string name="weapon_tech">Arma tecnológica</string>

    <!--    DIALOG -->
    <string name="ok">OK</string>
    <string name="cancel">CANCELAR</string>
    <string name="chose_name">Escoge un nombre:</string>
    <string name="error_input">Este campo es obligatorio</string>
    <string name="edit_name">Editar nombre</string>
    <string name="acrobatics">Acrobacias</string>
    <string name="general">General</string>
    <string name="athletics">Atletismo</string>
    <string name="dodge">Esquivar</string>
    <string name="defence">Defensa</string>
    <string name="commerce">Comerciar</string>
    <string name="knowledge">Conocimiento</string>
    <string name="charm">Carisma</string>
    <string name="social">Social</string>
    <string name="command">Mando</string>
    <string name="leadership">Liderazgo</string>
    <string name="common_lore">Saber popular</string>
    <string name="deceive">Engañar</string>
    <string name="fieldcraft">Survivalista</string>
    <string name="medicae">Medicae</string>
    <string name="sleight_of_hand">Trucos de mano</string>
    <string name="survival">Supervivencia</string>
    <string name="stealth">Sigilo</string>
    <string name="security">Seguridad</string>
    <string name="tech">Tecnológica</string>
    <string name="forbidden_lore">Saber prohibido</string>
    <string name="scholastic_lore">Saber académico</string>
    <string name="psyniscience">Psinisciencia</string>
    <string name="psyker">Psíquica</string>
    <string name="navigate">Navegación</string>
    <string name="parry">Parar</string>
    <string name="operate">Pilotar</string>
    <string name="logic">Lógica</string>
    <string name="linguistics">Lingüística</string>
    <string name="intimidate">Intimidar</string>
    <string name="interrogation">Interrogar</string>
    <string name="inquiry">Indagar</string>
    <string name="scrutiny">Escrutinio</string>
    <string name="tech_use">Competencia tecnológica</string>
    <string name="awareness">Perspicacia</string>
    <string name="trade">Oficio</string>
    <string name="linguistics_high_gothic">Gótico Clásico</string>
    <string name="wt_las">Entrenamiento con armas (Láser)</string>
    <string name="wt_solid_projectile">Entrenamiento con armas (PS)</string>
    <string name="master_of_paperwork_title">Maestro del papeleo</string>
    <string name="master_of_paperwork_description">"El personaje cuenta la Disponibilidad de todos los objetos como un nivel más disponible (los objetos muy raros cuentan como raros, los medios como comunes, etc.). "</string>
    <string name="cl_underworld">Bajos fondos</string>
    <string name="wt_shock">Eléctrica</string>
    <string name="the_face_of_the_law_title">El rostro de la Ley</string>
    <string name="the_face_of_the_law_description">"Un arbitrador puede repetir cualquier tirada de Intimidar e Interrogar, y puede sustituir su bonificación de Voluntad por sus NdE en estas tiradas. "</string>
    <string name="offence">Ataque</string>
    <string name="fl_warp">Disformidad</string>
    <string name="wt_low_tech">Rudimentaria</string>
    <string name="constant_thread_title">La amenaza constante</string>
    <string name="constant_thread_description">Cuando el personaje o un aliado en 10 metros provoca una tirada en la Tabla 6–2: Fenómenos psíquicos (página 196), el personaje puede aumentar o reducir el resultado en una cantidad igual a su bonificación de Voluntad.</string>
    <string name="mu_utility">Herramientas</string>
    <string name="replace_the_weak_flesh_title">Reemplaza la carne débil</string>
    <string name="replace_the_weak_flesh_description">"Un personaje del Adeptus Mechanicus cuenta la Disponibilidad de todos los implantes como dos niveles más disponible (un objeto raro cuenta como medio, muy raro como escaso, etc.). "</string>
    <string name="mechanicus_implants_title">"Implantes Mechanicus "</string>
    <string name="mechanicus_implants_description">(página 137)</string>
    <string name="tested_on_terra_title">Probado en Terra</string>
    <string name="tested_on_terra_description">Si el personaje toma la mejora de élite Psíquico en la creación de personaje, gana el rasgo Sancionado (página 138).</string>
    <string name="wt_flame">Lanzallamas</string>
    <string name="faith_is_all_title">La fe lo es todo</string>
    <string name="faith_is_all_description">" Al gastar un punto de Destino para ganar un +10 a una tirada, un personaje del Adeptus Ministorum obtiene en su lugar un +20. "</string>
    <string name="surface">Superficie</string>
    <string name="hammer_of_the_emperor_title">Martillo del Emperador</string>
    <string name="hammer_of_the_emperor_description">"Al atacar a un objetivo que un aliado atacó desde el final del último turno del guardia, el personaje puede repetir cualquier resultado de 1 o 2 en las tiradas de daño. "</string>
    <string name="wt_chain">Sierra</string>
    <string name="never_quit_title">Nunca cede</string>
    <string name="never_quit_description">"Un personaje proscrito suma +2 a su bonificación de Resistencia para el propósito de determinar la Fatiga. "</string>
    <string name="dialog_discard">"Descartar %1$s"</string>
    <string name="discard_message">Una vez descartado, no podrá recuperarse. ¿Está seguro?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skills">Habilidades</string>
    <string name="talents">Talentos</string>
    <string name="bonus">Bono</string>
    <string name="aptitudes">Aptitudes</string>
    <string name="other">Otro</string>
    <string name="choose_between_skill">Escoge entre habilidades:</string>
    <string name="choose_between_talents">Escoge entre talentos:</string>
    <string name="save_character">Guardar</string>
    <string name="WIP">Estamos trabajando en ello</string>
</resources>