<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingStart="@dimen/horizontal"
    android:paddingTop="@dimen/vertical"
    android:paddingEnd="@dimen/horizontal"
    android:paddingBottom="@dimen/vertical"
    tools:context=".views.OriginDialogFragment">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical"
        android:layout_marginBottom="@dimen/vertical"
        android:fontFamily="@font/requiem"
        android:textSize="@dimen/title" />

    <TextView
        android:id="@+id/dialog_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/characteristic_modifiers"
        android:textAllCaps="true"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dialog_characteristic_modifiers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fate_threshold"
        android:textAllCaps="true"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dialog_fate_threshold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/homeworld_bonus"
        android:textAllCaps="true"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dialog_homeworld_bonus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aptitude"
        android:textAllCaps="true"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dialog_aptitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wounds"
        android:textAllCaps="true"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dialog_wounds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recomended_backgrounds"
        android:textAllCaps="true"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dialog_backgrounds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/dialog_btn"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical"
        android:layout_marginBottom="@dimen/vertical"
        android:text="Vale" />

</LinearLayout>