<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/DarkHeresyTheme.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal"
            android:layout_marginTop="@dimen/vertical"
            android:layout_marginEnd="@dimen/horizontal"
            android:text="@string/chose_name" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horizontal"
                android:layout_marginTop="@dimen/vertical"
                android:layout_marginEnd="@dimen/horizontal"
                android:layout_marginBottom="@dimen/vertical" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel_btn"
                style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horizontal"
                android:layout_marginTop="@dimen/vertical"
                android:layout_marginEnd="@dimen/half_horizontal"
                android:layout_marginBottom="@dimen/vertical"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/ok_btn"
                style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/half_horizontal"
                android:layout_marginTop="@dimen/vertical"
                android:layout_marginEnd="@dimen/horizontal"
                android:layout_marginBottom="@dimen/vertical"
                android:text="@string/ok" />
        </LinearLayout>
    </LinearLayout>
</layout>