<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".views.creation.fragments.BackgroundFragment">

    <data>

        <variable
            name="background"
            type="com.example.dacaco.models.Background" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal"
            android:layout_marginTop="@dimen/vertical"
            android:layout_marginEnd="@dimen/horizontal"
            android:layout_marginBottom="@dimen/vertical"
            android:orientation="vertical">

            <TextView
                style="@style/DarkHeresyTheme.Title.2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/background" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/vertical"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/origin_select_world"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <AutoCompleteTextView
                        android:id="@+id/autocomplete"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:inputType="none|textNoSuggestions" />


                </com.google.android.material.textfield.TextInputLayout>

                <ImageButton
                    android:id="@+id/info_btn"
                    style="@style/DarkHeresyTheme.Button.OutlinedButton.Image"
                    android:layout_width="47dp"
                    android:layout_height="@dimen/icon_size"
                    android:layout_weight="0"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_info_black_48dp" />

                <ImageButton
                    android:id="@+id/dice_btn"
                    style="@style/DarkHeresyTheme.Button.OutlinedButton.Image"
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:layout_weight="0"
                    android:src="@drawable/ic_casino_black_48dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/skills_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical"
                android:orientation="vertical">

                <TextView
                    style="@style/DarkHeresyTheme.Title.2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/vertical"
                    android:text="@string/choose_between_skill" />

                <LinearLayout
                    android:id="@+id/layout_chose_between_skills"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/vertical"
                    android:gravity="center"
                    android:orientation="vertical" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/talents_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical"
                android:orientation="vertical">

                <TextView
                    style="@style/DarkHeresyTheme.Title.2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/vertical"
                    android:text="@string/choose_between_talents" />

                <LinearLayout
                    android:id="@+id/layout_chose_between_talents"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/vertical"
                    android:gravity="center"
                    android:orientation="vertical" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</layout>